--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
   <div class="content-page">
     <app-root></app-root>
   </div>
-<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
+<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="scripts.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 </html>
